apps/cloudlog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudlog-nginx
  namespace: cloudlog
spec:
  selector:
    matchLabels:
      app: cloudlog
  replicas: 3
  template:
    metadata:
      labels:
        app: cloudlog
    spec:
      containers:
        - name: cloudlog
          image: public.ecr.aws/h4u5l0d7/homelab-prod-ecr-cloudlog:2.8.8
          ports:
            - containerPort: 80
