apps/cloudlog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudlog
  namespace: cloudlog
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: cloudlog
