apps/cloudlog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudlog
  namespace: cloudlog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
    - host: cloudlog.internal.mateuszholowieszko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudlog
                port:
                  number: 80
  tls:
    - hosts:
        - cloudlog.internal.mateuszholowieszko.com
      secretName: cloudlog-internal-mateuszholowieszko-com-tls
